--- a/NodeJsAPI/Opportunity/opportunity-api-oas.yaml
+++ b/NodeJsAPI/Opportunity/opportunity-api-oas.yaml
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Opportunities API",
+    "title": "Opportunities API demo",
     "version": "9.2.1"
   },
   "paths": {
