--- a/NodeJsAPI/Opportunity/opportunity-api-oas.yaml
+++ b/NodeJsAPI/Opportunity/opportunity-api-oas.yaml
@@ -22,7 +22,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "example": "Opportunity created (not really).",
+                  "example": "Opportunity created (not really fake).",
                   "type": "string"
                 }
               }
